--- a/gb/ncid277_8.md
+++ b/gb/ncid277_8.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719438.md#1" target="_blank">反送中半年 中环超4万人集会“齐上齐落”</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo_2019-12-13_08-11-48-150x120.jpg" align ="left"></a>12月12日，香港反送中运动半年之际，4万3千人聚集中环的爱丁堡广场举行“612半周年齐上齐落集会”，各界代表台上分享了这半年的感想及表达继续抗暴的决心，并表示面对中共最大的敌人将不切割、不分化、齐上齐落。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719148.md#1" target="_blank">赵薇丈夫黄有龙被起诉 港名媛蔡一凤追讨巨款</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/zhaowei-huangyoulong-150x120.jpg" align ="left"></a>早前因“空手套白狼”被告上法庭的大陆知名影星赵薇和黄有龙夫妇，近日再度陷入欠债风波。香港亚视前执行董事盛品儒的太太蔡一凤，曾于7月底在社交平台公开向一名“知名女星的丈夫”追债，日前事件进展到她入禀追讨近2亿元（港币，下同），其中被告之一便是赵薇的丈夫黄有龙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719224.md#1" target="_blank">星岛再露红媒底牌 何柱国逼宫林郑内情</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719224.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1153461_horizontal-150x120.jpg" align ="left"></a>日前，星岛老板何柱国以“拭目以待”为题登广告历数特首林郑12条“罪状”，批其执行“止暴制乱”不力，文末提醒林郑2017年参选特首时所立“军令状”。何玩弄文字伪术，列“罪状”警告林郑未遵北京指令行事，后果很严重，再次显示其中共代理人身份。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719012.md#1" target="_blank">【新闻看点】林郑接连被打脸 北京该想想了</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c13e5fc055d3fa_ttl7dayVnX_WhatsApp_Image_2019-09-04_at_20.57.54-600x400-1-150x120.jpeg" align ="left"></a>连续几天，林郑接连被打脸。而作为对林郑发号施令的主子，北京当局是不是该想一想呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718861.md#1" target="_blank">习访澳门打造金融中心？专家：香港无可替代</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/04/130425115806100311-150x120.jpg" align ="left"></a>路透社日前独家报导，中国国家主席习近平下星期将访问澳门，宣布一系列的新政策，旨在把这个依靠博彩业经济的城市打造成一个金融中心。然而，专家认为，香港作为外资进入中国内地最好桥梁的角色，无可替代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719114.md#1" target="_blank">内外交困之际 中共突然晋升近百名将军</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11719114.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1401220857431944-150x120.jpg" align ="left"></a>在面临重重危机之际，中共当局突然在4天内晋升了96名将军，这引起外界的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718893.md#1" target="_blank">传美将取消12月关税 协议执行机制浮出水面</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1DR3U4-600x400-1-150x120.jpg" align ="left"></a>美国媒体报导，传川普政府周四决定是否取消12月对华关税议程，以及削减已加征的关税，有意思的是，同时浮现的还有中美贸易谈判中最难的执行机制部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718637.md#1" target="_blank">川普：非常接近跟中方达成一笔大协议</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718637.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LC4UI-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周四（12月12日）早上9点半推文说，“非常接近跟中方达成一笔大交易。他们想要，我们也想要！”随后人民币市场瞬间反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718625.md#1" target="_blank">罗斯：贸易战每拖一天 对美国就越有利</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-981264840-150x120.jpg" align ="left"></a>美国按计划将在12月15日对来自中国的约1600亿美元的商品加征新关税，罗斯说，“最重要的是，我们需要跟中共达成一个’合适’的协议，不管我们在12月15日达成这个协议也好，或之后也行，总之达成一个公平的协议才是最重要的。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718312.md#1" target="_blank">台行政院长：境外势力影响选举必痛加打击</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f7a5744cb77626ec22275a52b390db91-150x120.jpg" align ="left"></a>2020年中华民国总统大选逼近，行政院长苏贞昌12月12日表示，对境外势力影响台湾选举一定要痛加打击。他强调，请国人别让做票、买票及骗票等行为影响台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717983.md#1" target="_blank">湖南前副省长受贿6667万 曾是秦光荣下属</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xiang-lili-1-600x400-150x120.jpg" align ="left"></a>12月12日，中共湖南省人大常委会前副主任向力力受贿案在广西柳州开庭审理。向力力被指控受贿6667万元（人民币，下同）。向力力曾是已落马的云南省委前书记秦光荣的老下属。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717973.md#1" target="_blank">捷克财团设名人网传播亲共言论 遭媒体曝光</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-635036472-150x120.jpg" align ="left"></a>捷克首富凯尔纳（Petr Kellner）所拥有、在中国有商业利益的捷克捷信集团（Home Credit），被指控经由公关代理收买大批捷克名人，以传播亲共言论，试图影响社会舆论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717810.md#1" target="_blank">谴责何君尧两议案 香港立法会无人反对</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190722052806100484-150x120.jpg" align ="left"></a>亲共立法会议员何君尧在区议会选举中落败。日前，泛民立法会议员郭家麒和毛孟静在立法会上分别动议谴责何君尧，包括建制派在内，无人提出反对。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717564.md#1" target="_blank">中共渗透国际社会 跨境抓捕滞留泰国难民</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sbOk_oGY-150x120.jpg" align ="left"></a>由于中共迫害人权，很多大陆异议人士逃到泰国，宁可在泰国滞留当难民，也不愿回到中共野蛮专制之下。然而，中共把魔爪伸向海外继续迫害，令他们身陷险境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:25 PM							</td></tr>
@@ -14,24 +25,9 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank">孔子学院再遭挫 比利时荷兰语大学终止合作</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VUB_campus_Etterbeek-150x120.jpg" align ="left"></a>比利时荷语“布鲁塞尔自由大学”（VUB）周二（12月10日）决定，自2020年6月起，将不再延长与孔子学院的合作。VUB认为，自由研究处于风险中，此外，孔子学院中方院长被比利时安全部指控从事间谍活动，也促使VUB取消合作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank">传国家京剧院副院长袁慧琴交辞职申请</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-7-150x120.jpg" align ="left"></a>知名京剧演员姜亦珊去世后，微信圈疯传国家京剧院副院长袁慧琴已经提交请辞申请，并主动投案表示愿意接受调查。但袁仍然参加了国家大剧院近日的两场活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank">新闻自由恶化 中共今年监禁记者数全球第一</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312231117082320-150x120.jpg" align ="left"></a>位于纽约的保护记者委员会（The Committee to Protect Journalists）周三（12月11日）表示，中国是2019年全球监禁新闻工作者人数最多的国家，关押了至少48名记者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank">绿党民调：近7成台湾民众对中共反感</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/e44195dcfba381b7b1b223dec4e7e74caa-150x120.jpg" align ="left"></a>2020总统、立委选举进入倒数1个月，绿党11日公布最新民调，民进党总统蔡英文以48.9%支持度，大幅度领先国民党总统候选人韩国瑜的19.7%、亲民党宋楚瑜的8.3%；至于对中共的好感度方面，民调显示反感者高达近七成，有好感者则不到一成，显示民众不认同与中共靠拢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715991.md#1" target="_blank">中共否认介入台大选 陆委会：事实胜于雄辩</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-12-112.44-150x120.jpg" align ="left"></a>国际多次提醒中共意图干预台湾大选，近期北京再抛“对台26项措施”，国台办却称“我们从来都不介入台湾地区选举”。对此，陆委会11日表示，事实胜于雄辩，“26条措施”就是赤裸裸介入台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank">确保稀土供应 美军采取自二战以来紧急行动</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Rareearthoxides-1-600x390-150x120.jpg" align ="left"></a>路透社看到的一份政府文件显示，美军计划为建造稀土加工设施提供资金，这是华盛顿紧急行动的部分举措，目标是确保可用于制造军事武器和电子产品的稀土的国内供应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank">中共介选台湾3管道 美学者：黑道 台商 宗教</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/10/n11713539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/02d2bed17e7ca46e084a6671f9d48970-150x120.jpg" align ="left"></a>2020总统选举进入倒数1个月，中共介入台湾选举的问题一直备受各界关注。“美国企业研究所”客座研究员马明汉（Michael Mazza）10日表示，从中长期来看，无论哪个政党执政，两岸关系都会走向负面发展，目前蔡政府很可能会连任，预料中共可能会加大对台湾的军事、经济压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank">P2P倒了领导先跑 中国金融反腐藏特权</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>中国官员腐败花招多，并反映热门时事。中共中央纪检委10日发布公告，金融领域官员除了收受贿赂，还利用职务之便，在清理网贷（P2P借贷）等案件上“特权挽损”，让自己先抽身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:16 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank">解除民主派议员陈淑庄职务动议被否决</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-06_11-46-05-150x120.jpg" align ="left"></a>香港区议会选举后，建制派对民主派“动手”。今天（12月11日），建制派立法会议员在大会上动议，解除民主派陈淑庄、邵家臻的议员职务。但因建制派只有40席，投票时，未能达到三分之二的要求，故此动议被否决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank">台外长：若中共武力介入香港 台湾愿助港人</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MH2CN-150x120.jpg" align ="left"></a>台湾外交部长吴钊燮周二（12月10日）表示，台湾支持香港人民的自由与民主，如果中共以武力介入香港，镇压抗议者，台湾将会与国际社会一道帮助港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank">大陆司法界两贪官被逮捕 一人与周永康有关系</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11714980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1511012105372382-600x400-1-150x120.jpg" align ="left"></a>12月11日，中共最高检察院发布消息称，中共吉林省检察院前党组书记、检察长杨克勤，海南省高级法院前党组成员、副院长张家慧均以涉嫌受贿罪被逮捕，案子均被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 8:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715447.md#1" target="_blank">央视导弹画面涉嫌造假 遭军方内部人士拆穿</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-54984486-150x120.jpg" align ="left"></a>中共喉舌中央电视台于12月8日的新闻联播中播放了导弹发射的画面，声称“火箭军某新型常规导弹形成全天候作战能力”，但有中共军方内部人士提出多个疑点说，央视的画面有造假之嫌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715195.md#1" target="_blank">如何应对中共人海谍战？ 专家提建议</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-138076011-600x400-1-150x120.jpg" align ="left"></a>王立强投诚澳洲引发外界对谍战的关注。而美国的情报部门越来越了解中共对西方的谍战手段。可是，为什么有些中国人愿意配合中共做间谍？而采取怎样的方式可以遏制中共对西方的人海谍战？
-中共对全球实施人海谍战
-自称是中共间谍的王立强日前投诚澳洲引发外界对谍战的关注。外界认为，王立强并非专业谍报人员，他只是中共人海谍战中的一分子。
-
-10月30日，美国联邦调查局（.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11714822.md#1" target="_blank">受贿逾六千万 陕西省委前秘书长获刑14年</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11714822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/Bn1-1-150x120.jpg" align ="left"></a>落马一年多后，中共陕西省委前常委、省委秘书长钱引安日前以受贿6313万余元，一审被判处有期徒刑14年。陆媒曾披露，钱引安被查与秦岭北麓违规建别墅问题有关联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715093.md#1" target="_blank">美军披露新型公路机动导弹 可反制中共威胁</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11715093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HXS6WC35VFGDTJB4QWT4N5C3CU-150x120.jpg" align ="left"></a>美国陆军部长麦卡锡（Ryan Mccarthy）在12月7日披露了正在开发中、可藉由发射车机动发射的公路机动导弹（road-mobile missile），它们将大幅提高陆军的防御能力。这些中程导弹将可部署在第二岛链或南海周边国家，以反制中共的军事威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701463.md#1" target="_blank">走出华为的工程师：华为是全人类的噩梦(下)</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>华为员工李洪元事件，揭开了华为利用公权力构陷员工入狱的黑幕，引发外界关注。一名华为离职工程师向大纪元表示，华为就是中共的一个权力部门，它是结合商业、间谍、情报、偷窃的军工复合体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718227.md#1" target="_blank">五千中共官员非法来台 基进：实际恐超数倍</a><br></h3>台北地检署近日查出，新北市水资源经济发展协会等机构涉嫌与非甲种旅行社业者共谋，提供假专业交流活动相关资料，2017年开始安排至少5,000名中国公务人员及其亲友来台。台湾基进党主席陈奕齐警告，实际时间点可能更早、非法来台数量更多，渗透规模恐超乎预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718649.md#1" target="_blank">陕西省纪委“厅级内鬼”胡传祥被判9年</a><br></h3>12月10日，中共陕西省纪委、省预防腐败局预防腐败室前主任胡传祥，因行贿、受贿罪而被判处9年，并处罚金320万元（人民币）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717043.md#1" target="_blank">【翻墙必看】中共高层为自己准备后路</a><br></h3>如果两年前有人说中共将很快走向覆亡，很多人认为是痴人说梦，那么在2019年即将走过之际，越来越多的人，无论是西方政要，还是中共官员和普通民众，已经相信这并非是什么不切实际的幻梦。因为中共正在往死路上狂奔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717304.md#1" target="_blank">内蒙古鄂尔多斯公安局高官刘杰落马</a><br></h3>中共内蒙古公安系统被深度清洗。12月12日，内蒙古鄂尔多斯市公安局副局长刘杰涉嫌“严重违纪违法”，目前正在接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11714983.md#1" target="_blank">天津街道书记贪3亿囚18年 每天躺钱上睡觉</a><br></h3>上月25日，天津市滨海新区寨上街道前工委书记陈玉慧，因贪污、受贿等多罪，被判处有期徒刑18年、罚款140万元人民币（下同）。其案涉及金额高达3.17亿元。陈玉慧被指每天躺在钱上睡觉，向他行贿的恶势力头目因其太贪而绝交。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/ncid277_8.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid277_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/ncid277_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_8.htm">http://www.epochtimes.com/gb/ncid277_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
